--- a/index.html
+++ b/index.html
@@ -23,16 +23,29 @@
     <!-- iOS meta tags & icons -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="toolflix" />
-    <link rel="apple-touch-icon" href="./icons/Icon-192.png" />
+    <meta name="apple-mobile-web-app-title" content="papaQuiz" />
+    <link
+      rel="apple-touch-icon"
+      href="https://sylar-igaw.github.io/flutterTest/icons/Icon-192.png"
+    />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://sylar-igaw.github.io/flutterTest/favicon.png"
+    />
 
     <title>toolflix</title>
-    <link rel="manifest" href="./manifest.json" />
+    <link
+      rel="manifest"
+      href="https://sylar-igaw.github.io/flutterTest/manifest.json"
+    />
   </head>
   <body>
-    <script src="./flutter_bootstrap.js"></script>
+    <script src="https://sylar-igaw.github.io/flutterTest/flutter_bootstrap.js"></script>
+    <!-- <script>
+      window.flutterWebRenderer = "html";
+    </script> -->
   </body>
 </html>
