--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="/" />
+    <base href="/flutterTest/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -23,29 +23,19 @@
     <!-- iOS meta tags & icons -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="papaQuiz" />
-    <link
-      rel="apple-touch-icon"
-      href="https://sylar-igaw.github.io/flutterTest/icons/Icon-192.png"
-    />
+    <meta name="apple-mobile-web-app-title" content="toolflix" />
+    <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://sylar-igaw.github.io/flutterTest/favicon.png"
-    />
+    <link rel="icon" type="image/png" href="favicon.png" />
 
     <title>toolflix</title>
-    <link
-      rel="manifest"
-      href="https://sylar-igaw.github.io/flutterTest/manifest.json"
-    />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
-    <script src="https://sylar-igaw.github.io/flutterTest/flutter_bootstrap.js"></script>
-    <!-- <script>
+    <script src="flutter_bootstrap.js"></script>
+    <script>
       window.flutterWebRenderer = "html";
-    </script> -->
+    </script>
   </body>
 </html>
