--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     <!-- iOS meta tags & icons -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="toolflix" />
+    <meta name="apple-mobile-web-app-title" content="PapaQuiz" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>toolflix</title>
+    <title>Quiz</title>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <script src="flutter_bootstrap.js"></script>
     <script>
-      window.flutterWebRenderer = "html";
+      // window.flutterWebRenderer = "html";
     </script>
   </body>
 </html>
